--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,51 +14,50 @@
 		"lint-fix": "next lint --fix"
 	},
 	"dependencies": {
-		"@clerk/nextjs": "^4.25.4",
-		"@date-io/date-fns": "^1.3.13",
 		"@date-io/dayjs": "^2.17.0",
-		"@emotion/cache": "11.10.5",
-		"@emotion/react": "11.10.6",
-		"@emotion/server": "11.10.0",
-		"@emotion/styled": "11.10.6",
-		"@heroicons/react": "2.0.16",
-		"@mui/icons-material": "^5.14.15",
-		"@mui/lab": "5.0.0-alpha.120",
-		"@mui/material": "5.11.10",
-		"@mui/system": "5.11.9",
-		"@mui/x-date-pickers": "5.0.19",
-		"@prisma/client": "^5.5.2",
-		"apexcharts": "3.37.0",
-		"axios": "^1.6.0",
-		"date-fns": "2.29.3",
-		"dayjs": "^1.11.10",
-		"formik": "2.2.9",
-		"next": "13.1.6",
-		"nprogress": "0.2.0",
+		"@emotion/cache": "^11.11.0",
+		"@emotion/react": "^11.11.4",
+		"@emotion/server": "^11.11.0",
+		"@emotion/styled": "^11.11.5",
+		"@heroicons/react": "^2.1.3",
+		"@mui/icons-material": "^5.15.15",
+		"@mui/lab": "^5.0.0-alpha.170",
+		"@mui/material": "^5.15.15",
+		"@mui/system": "^5.15.15",
+		"@mui/x-date-pickers": "^6.19.9",
+		"@prisma/client": "^5.22.0",
+		"apexcharts": "^3.49.1",
+		"axios": "^1.7.2",
+		"date-fns": "^2.30.0",
+		"dayjs": "^1.11.11",
+		"formik": "^2.4.6",
+		"next": "^15.5.4",
+		"nprogress": "^0.2.0",
 		"openai-edge": "^1.2.2",
-		"prisma": "^5.5.2",
-		"prop-types": "15.8.1",
-		"quill": "^1.3.7",
-		"react": "18.2.0",
-		"react-apexcharts": "1.4.0",
-		"react-dom": "18.2.0",
-		"react-icons": "^4.11.0",
+		"prisma": "^5.22.0",
+		"prop-types": "^15.8.1",
+		"quill": "^2.0.2",
+		"react": "^19.0.0",
+		"react-apexcharts": "^1.4.0",
+		"react-dom": "^19.0.0",
 		"react-draggable": "^4.4.6",
+		"react-icons": "^5.2.1",
 		"react-quill": "^2.0.0",
-		"simplebar-react": "^3.2.1",
-		"yup": "1.0.0"
+		"simplebar-react": "^3.2.5",
+		"yup": "^1.4.0"
 	},
 	"devDependencies": {
-		"@types/node": "18.13.0",
-		"@types/nprogress": "0.2.0",
-		"@types/numeral": "2.0.2",
-		"@types/react": "18.0.28",
-		"@types/react-dom": "18.0.11",
-		"autoprefixer": "^10.4.16",
-		"eslint": "8.34.0",
-		"eslint-config-next": "13.1.6",
-		"postcss": "^8.4.31",
-		"prisma": "^5.5.2",
-		"tailwindcss": "^3.3.3"
+		"@types/node": "^22.10.2",
+		"@types/nprogress": "^0.2.3",
+		"@types/numeral": "^2.0.5",
+		"@types/react": "^19.0.6",
+		"@types/react-dom": "^19.0.2",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.18.0",
+		"eslint-config-next": "^15.5.4",
+		"postcss": "^8.4.49",
+		"prisma": "^5.22.0",
+		"tailwindcss": "^3.4.17",
+		"typescript": "^5.7.3"
 	}
 }
