feat: Add PostgreSQL database setup and complete REST API endpoints
Backend improvements:
- Add PostgreSQL support with Docker Compose configuration
- Add prompt_id field to Text model for ML integration
- Create REST API endpoints for Assignments, Students, and Teachers
- Add database seed command with test data
- Update dependencies (dj-database-url, psycopg2-binary, python-dotenv)
- Add .env.example for environment configuration
- Fix STATICFILES_DIRS warning in settings

Database:
- Add migration for prompt_id field in Text model
- Create seed_data management command for test data population

Documentation:
- Update .gitignore for Python, Django, and Docker files
- Remove duplicate README files (keep root README only)
- Add .env.example with sample configuration

This commit sets up local development environment with PostgreSQL
and provides complete API coverage for all models.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,35 @@
 .vscode
-# __pycache__/
-# backend/backend/__pycache__/
-# backend/eval/__pycache__/
-# backend/eval/migrations/__pycache__/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
 
+# Django
+*.log
+*.pot
+db.sqlite3
+media/
+staticfiles/
+
+# Environment variables
+.env
+*.env
+
+# Frontend
 /frontend/package-lock.json
+/frontend/.next
+/frontend/node_modules
+
+# Docker
+docker-compose.override.yml
+
+# IDEs
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
